--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   fluttertoast: ^8.2.8
   video_player: ^2.9.2
+  flutter_svg: ^2.0.16
 
 
 dev_dependencies:
